--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,18 @@ footer {
 .sidebar ul li:hover {
     transform: translateX(5px);
 }
+.sidebar-icon {
+    display: none;
+    position: absolute;
+    color: #fff;
+    top: 10px;
+    left: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+sidebar-overlay {
+    display: none;
+}
 .content {
     float: left;
     width: 65%;
@@ -185,7 +197,7 @@ footer {
     transition: max-height 0.3s ease;
 }
 .project-details.show {
-    max-height: 200px;
+    max-height: 250px;
 }
 .menu-icon {
     position: absolute;
@@ -203,7 +215,7 @@ footer {
     right: 10px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
+    z-index: 1;
     transition: max-height 0.3s ease;
 }
 .menu.show {
@@ -221,4 +233,48 @@ footer {
 }
 .menu ul li:hover {
     background: #f4f4f4;
+}
+@media(max-width: 1000px) {
+    .content {
+        width: 100%;
+    }
+    .project-details.show {
+        max-height: 500px;
+    }
+    .sidebar {
+        position: fixed;
+        left: -80%;
+        top: 0;
+        bottom: 0;
+        width: 70%;
+        margin-top: 0px;
+        background: #2D5473;
+        color: #fff;
+        padding: 20px;
+        overflow-y: auto; 
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        z-index: 3;
+        transition: left 0.3s ease;
+    }
+    .sidebar.open {
+        left: 0;
+    }
+    .sidebar ul li {
+        margin: 10px 0;
+    }
+    .sidebar-overlay {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        background-color: rgba(0, 0, 0, 0.0);
+        transition: background-color 0.3s ease;
+        z-index: 2;
+    }
+    .sidebar-icon {
+        display: block;
+    }
 }
